# Gigen-Engine

./: CMakeLists.txt
Assets/Shaders/: frag.frag  vert.vert
Dependencies/Assimp/lib/: assimp-vc142-mt.lib
Documentations/: NormeConfig (1).txt  NormeConfig.txt
GigEngine/: CMakeLists.txt
GigEngine/Editor/: CMakeLists.txt
GigEngine/Editor/Headers/: Displayable.h  EditorCamera.h  FPSDisplay.h  GameObjectInspector.h  HierarchyDisplay.h  Interface.h  InterfaceManager.h  ToolsDisplay.h
GigEngine/Editor/Sources/: Console.cpp  Displayable.cpp  EditorCamera.cpp  FPSDisplay.cpp  FileDisplay.cpp  FileExplorer.cpp  GameObjectInspector.cpp  HierarchyDisplay.cpp  Interface.cpp  InterfaceManager.cpp  MenuBarDisplay.cpp  ToolsDisplay.cpp
GigEngine/Editor/include/: EditorCamera.h  FileDisplay.h  FileExplorer.h  GameObjectInspector.h  HierarchyDisplay.h  IconsMaterialDesignIcons.h  Interface.h  MenuBarDisplay.h  ToolsDisplay.h
GigEngine/Engine/: CMakeLists.txt
GigEngine/Engine/Headers/: Application.h  Camera.h  Component.h  DrawLine.h  EditorCamera.h  FixedQueue.h  GameObject.h  GameObjectManager.h  IResource.h  Inputs.h  Light.h  Log.h  Material.h  Mesh.h  Model.h  Renderer.h  ResourceManager.h  Shader.h  Skybox.h  Texture.h  ThreadPool.h  Transform.h  Watch.h  Window.h
GigEngine/Engine/Sources/: Animation.cpp  Animator.cpp  Application.cpp  AudioSource.cpp  Camera.cpp  Component.cpp  DrawLine.cpp  EditorCamera.cpp  FreeCam.cpp  GameObject.cpp  GameObjectManager.cpp  IResource.cpp  Inputs.cpp  Light.cpp  Log.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  PostProcess.cpp  RectTransform.cpp  Renderer.cpp  ResourceManager.cpp  SceneSaver.cpp  Shader.cpp  ShadowMapping.cpp  Skybox.cpp  Texture.cpp  ThreadPool.cpp  Transform.cpp  UIElement.cpp  UIImage.cpp  UIManager.cpp  UIText.cpp  Watch.cpp  Window.cpp
GigEngine/Engine/include/: Animation.h  Animator.h  Application.h  AudioSource.h  Camera.h  Component.h  DrawLine.h  GameObject.h  GameObjectManager.h  Inputs.h  Light.h  Log.h  Model.h  ModelLoader.h  Object.h  PostProcess.h  RectTransform.h  Renderer.h  ResourceManager.h  ResourceManager.inl  SceneSaver.h  Skybox.h  Texture.h  Transform.h  UIElement.h  UIImage.h  UIManager.h  UIText.h  Window.h
GigEngine/Main/Sources/: main.cpp
GigEngine/MathsTest/: CMakeLists.txt
GigEngine/MathsTest/Sources/: Mat3_UnitTest.cpp  Mat4_UnitTest.cpp  Quaternion_UnitTest.cpp  Vec2_UnitTest.cpp  Vec3_UnitTest.cpp  Vec4_UnitTest.cpp  main.cpp
GigEngine/Physics/: CMakeLists.txt
GigEngine/Physics/Sources/: CapsuleRigidBody.cpp  RigidBody.cpp  SphereRigidBody.cpp  WorldPhysics.cpp
GigEngine/Physics/include/: RigidBody.h  WorldPhysics.h
GigEngine/Scripting/: CMakeLists.txt
GigEngine/Scripting/Sources/: Behaviour.cpp  LuaBindComponent.cpp  LuaBindGameObject.cpp  LuaBindGlobal.cpp  LuaBindMath.cpp  LuaBinder.cpp  ScriptInterpreter.cpp
GigEngine/Scripting/include/: Behaviour.h  Behaviour.inl  LuaBindComponent.h  ScriptInterpreter.h
Resources/Editor/Scripts/: KillerBox.lua  NewScript0.lua  NewScript2.lua  NewScript3.lua  NewScript6.lua  Player.lua  SpaceBox.lua  test.lua
Resources/Engine/: appicon.aps
Resources/Engine/Models/: SKM_Manny_Simple.fbx
Resources/Engine/Shaders/: UIFrag.frag  UIVert.vert  UIVertText.vert  core_frag.frag  core_vert.vert  postProcess.frag  postProcess.vert  vertAnim.vert
Resources/Models/: imgui.ini
Resources/Scenes/: Monkey.chad  bob.chad  default.chad
Resources/Scripts/: test.lua
Resources/Shaders/: core_frag.frag  frag.frag  vert.vert  vertLine.vert
